welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:70: error: Unit does not take parameters
	growFlowers1() {
                       ^